--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,3 +4,11 @@ sourceCompatibility = 1.7
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 sourceSets.main.java.srcDirs = [ "src/" ]
+
+sourceSets{
+    main{
+        resources  {
+            srcDirs = ["src/resources"]
+        } 
+    }
+}
